# mwa-uvdata-pipeline

./: README.md  pyproject.toml
src/mwa_utils/: __init__.py  configurators.py  processors.py  utils.py
