[project]
name = "mwa-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rafael", email = "30427560+rafrafavi@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "astropy>=6.1.7",
    "pyuvdata>=3.1.3",
    "ssins",
]

[project.scripts]
mwa-utils = "mwa_utils:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Contents for ruff.toml (based on pyuvdata's pyproject.toml)

[ruff.lint]
select = [
    "E",   # pycodestyle
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "I",   # isort
    # "C90", # McCabe complexity. Consider for the future
]
ignore = [
    "N806",   # non-lowercase variable (we use N* for axes lengths)
    "B028",   # no-explicit-stacklevel for warnings
    "SIM108", # prefer ternary operators. I find them difficult to read.
    "D203",   # one-blank-line-before-class. we use two.
    "D212",   # multi-line-summary-first-line. We put it on the second line.
]

[ruff.lint.per-file-ignores]
"tests/*" = ["D"] # Don't require docstrings for tests
"docs/*.py" = [
    "D",
    "A",
] # Don't require docstrings or worry about builtins for docs
"setup.py" = ["D"] # Don't require docstrings for setup.py

[ruff.format]
skip-magic-trailing-comma = true

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]

[tool.uv.sources]
ssins = { git = "https://github.com/mwilensky768/SSINS", rev = "fa176f2" }

[ruff.lint.pycodestyle]
max-line-length = 88

# consider setting this in the future
# [ruff.lint.mccabe]
# max-complexity = 30

[ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[ruff.lint.pydocstyle]
convention = "numpy"
